--- a/AppInterior/FoodPr/app/build.gradle
+++ b/AppInterior/FoodPr/app/build.gradle
@@ -45,4 +45,6 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
 }
