--- a/AppInterior/FoodPr/settings.gradle
+++ b/AppInterior/FoodPr/settings.gradle
@@ -1,15 +1,18 @@
 pluginManagement {
     repositories {
         google()
-        mavenCentral()
+//        mavenCentral()
+        jcenter()
         gradlePluginPortal()
     }
 }
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
+        maven { url "https://jitpack.io" }
         google()
-        mavenCentral()
+//        mavenCentral()
+        jcenter()
     }
 }
 rootProject.name = "FoodApp"
