--- a/AppInterior/FoodPr/app/src/main/AndroidManifest.xml
+++ b/AppInterior/FoodPr/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:allowBackup="true"
@@ -15,6 +16,15 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".Activitis.Homes.HomecsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activitis.Settings.NotificationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activitis.Settings.QuestionActivity"
+            android:exported="false" />
         <activity
             android:name=".Activitis.Historys.HistoryDetailActivity"
             android:exported="false" />
